[package]
name = "orders_problem"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
dotenv = "0.15"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"